# template

./: Cargo.toml  Makefile
.cargo/: config.toml
ld/: DEMOSYSTEM_FLASH.ld
lib/: demo_system.rs  gpio.rs  interrupt.rs  lib.rs  peripherals.rs  register.rs  timer.rs  uart.rs
lib/peripherals/: gpio.rs  timer.rs  uart.rs
src/: gpiodemo.rs  main.rs  startup.s  timerdemo.rs  uartdemo.rs
