[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "riscv_demosystem"
path = "lib/lib.rs"

[[bin]]
name = "uartdemo"
path = "src/uartdemo.rs"

[[bin]]
name = "gpiodemo"
path = "src/gpiodemo.rs"

[[bin]]
name = "timerdemo"
path = "src/timerdemo.rs"


[dependencies]
